--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -90,6 +90,8 @@ Other
 * GITHUB#14705: Use Comparators for some PriorityQueue implementations. (Simon Cooper)
 * GITHUB#14761: Use more Comparators for PriorityQueue implementations. (Simon Cooper)
 * GITHUB#14817: Refactor some complex uses of PriorityQueue to use Comparators. (Simon Cooper)
+* GITHUB#14899: Deprecate MergeSpecification#segString(Directory) (kitoha)
+
 
 ======================= Lucene 10.3.0 =======================
 
