assertDocValuesEquals should support sparse sorted doc_values (#14839)
* assertDocValuesEquals should support sparse sorted doc_values

In LuceneTestCase, assertDocValuesEquals compares the doc_values
in two indices. For SortedSetDocValues, as well as other doc value
types, it does not assume that every document has a value. But for
SortedDocValues, it requires that every doc have a value. Remove this
restriction.

* add change to CHANGES.txt

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -253,6 +253,8 @@ Other
 
 * GITHUB#14898: Fix typo in Circle2D.java (Hokuto Joel Ide)
 
+* GITHUB#14839: Add support for sparse SortedDocValues to LuceneTestCase.assertDocValuesEquals (Parker Timmins)
+
 ======================= Lucene 10.2.2 =======================
 
 Bug Fixes
