--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -40,6 +40,8 @@ New Features
 Improvements
 ---------------------
 
+* Require named thread factory in ThreadPoolExecutor constructors. (Dawid Weiss)
+
 * GITHUB#14597: Rewrite expressions compiler to use Java 24+ Classfile library instead of ASM.
   This avoids clashes with other ASM versions on classpath because it removes the dependency.
   (Uwe Schindler)
