--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -220,6 +220,8 @@ Optimizations
 
 * GITHUB#14970: Further speed up filtering hits by score. (Adrien Grand)
 
+* GITHUB#14991: Refactor for loop at PointRangeQuery hot path. (Ge Song)
+
 Changes in Runtime Behavior
 ---------------------
 * GITHUB#14823: Decrease TieredMergePolicy's default number of segments per
