--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -126,6 +126,8 @@ Optimizations
 
 * GITHUB#14976: Utilize docIdRunEnd on ReqExclBulkScorer. (Ge Song)
 
+* GITHUB#14991: Refactor for loop at PointRangeQuery hot path. (Ge Song)
+
 Changes in Runtime Behavior
 ---------------------
 * GITHUB#14823: Decrease TieredMergePolicy's default number of segments per
