--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -7,8 +7,6 @@ http://s.apache.org/luceneversions
 
 API Changes
 ---------------------
-* GITHUB#11023: Removing deprecated parameters from CheckIndex. (Jakub Slowinski)
-
 * GITHUB#14165: TieredMergePolicy's maxMergeAtOnce parameter was removed. (Adrien Grand)
 
 * GITHUB#14160: Adjusts the default HNSW search behavior so that filter optimized search is enabled
@@ -31,6 +29,8 @@ API Changes
 
 New Features
 ---------------------
+* GITHUB#15015: MultiIndexMergeScheduler: a production multi-tenant merge scheduler (Shawn Yarbrough)
+
 * GITHUB#14097: Binary partitioning merge policy over float-valued vector field. (Mike Sokolov)
 
 * GITHUB#14178: Add a Faiss-based vector format in the sandbox module. (Kaival Parikh)
