Add a bulk scoring interface to RandomVectorScorer (#14978)
This commit adds a bulk scoring API to RandomVectorScorer. The API accepts a list of ordinals and fills a list of floats with the scores.

Use bulk scoring in the HNSW codec:

In HnswGraphSearcher, buffer all the ordinals resulting from visiting the top candidate for bulk scoring.
During exhaustive search, buffer up to 64 ordinals at a time for bulk scoring.
This change does not provide a Panama implementation of this method for common vector types as I was
not able to write an implementation that yielded non-trivial benefits for most processors, but there are other
cases that may benefit from this:
 * Native implementations can use hardware specific features like CPU prefetching, matrix multiplication units, or GPUs.
 * Implementations that serve out of storage can prefetch vectors into memory using bulk APIs.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -116,6 +116,9 @@ API Changes
 
 * GITHUB#14899: Deprecate MergeSpecification#segString(Directory) (kitoha)
 
+* GITHUB#14978: Add a bulk scoring interface to RandomVectorScorer
+  (Trevor McCulloch, Chris Hegarty)
+
 New Features
 ---------------------
 * GITHUB#14404: Introducing DocValuesMultiRangeQuery.SortedNumericStabbingBuilder into sandbox.
