--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -138,6 +138,9 @@ Changes in Runtime Behavior
 
 Bug Fixes
 ---------------------
+* GITHUB*15025: flush segments in addIndexes, not in addIndexesReaderMerge;
+  reduces extra needless merge activity
+
 * GITHUB#14880: NPE exception could occur in Luke on Windows when using network shares (wuth)
 
 * GITHUB#14654: ValueSource.fromDoubleValuesSource(dvs).getSortField() would throw errors when
