--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -63,7 +63,7 @@ Optimizations
 
 * GITHUB#14874: Improve off-heap KNN byte vector query performance in cases where indexing and search are performed by the same process. (Kaival Parikh)
 
-* GITHUB#15043: Vectorize L2 normalize function
+* GITHUB#15043: Vectorize L2 normalize function. (Ramakrishna Chilaka)
 
 Bug Fixes
 ---------------------
