--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -237,7 +237,7 @@ Optimizations
 
 * GITHUB#15001: Remove full integrity check from SortingStoredFieldsConsumer (Martijn van Groningen)
 
-* GITHUB#14980: Add bulk off-heap scoring for float32 vectors (Chris Hegarty)
+* GITHUB#14980, GITHUB#15037: Add bulk off-heap scoring for float32 vectors (Chris Hegarty)
 
 * GITHUB#15004: Wraps all iterator with likelyImpactsEnum under BlockMaxConjunctionBulkScorer. (Ge Song)
 
