Use READONCE to read segment infos (#15074)
This commit uses READONCE to read segment infos.

relates #15068

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -9,6 +9,8 @@ Bug Fixes
 ---------------------
 * GITHUB#14858, GITHUB#12146: Simplify max score for kNN vector queries, ensuring vector queries handle advanceShallow correctly (Julie Tibshirani)
 
+* GITHUB#15074: Fix to use READONCE when reading segment infos (Chris Hegarty)
+
 ======================== Lucene 9.12.2 =======================
 
 
