DisjunctionQuery sub-clause iteration should be stable (#14885)
Iterating over the MultiSet of sub-clauses could produce them in different orders
on different JVMs.  This caused a bug in the monitor, which relies on the order of 
sub-clauses being stable when using query decomposition: a query decomposed and
indexed into a QueryIndex by one JVM would then load the incorrect sub-clause as
a prospective match when used in a separate process.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -187,6 +187,11 @@ Bug Fixes
 
 * GITHUB#15074: Fix to use READONCE when reading segment infos (Chris Hegarty)
 
+* GITHUB#14886: Prevent missed matches in lucene-monitor caused by unstable
+  iteration of sub-queries in BooleanQuery and DisjunctionMaxQuery. This
+  resulted in query branches being wrongly ignored if the QueryIndex was
+  built by a different JVM. (Luke Kot-Zaniewski)
+
 Build
 ---------------------
 * Upgrade forbiddenapis to version 3.9.  (Uwe Schindler)
