Rewrite SortedNumericDocValuesRangeQuery using DocValuesSkippers (#15083)
If DocValuesSkippers are enabled on a field, we can check at rewrite time
if a range query will match all or none of the documents in all segments,
and rewrite to a corresponding MatchAllDocsQuery or MatchNoDocsQuery.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -253,6 +253,8 @@ Optimizations
 * GITHUB#15039: Score computations are now more reliably vectorized.
   (Adrien Grand, Guo Feng)
 
+* GITHUB#15083: Use DocValuesSkippers in SortedNumericDocValuesRangeQuery#rewrite(). (Alan Woodward)
+
 Changes in Runtime Behavior
 ---------------------
 * GITHUB#14823: Decrease TieredMergePolicy's default number of segments per
