Hunspell suggestion: fix bug where outer isWorseCheck was ignored in `GeneratingSuggester`
On top of that:
* Remove redundant `isSuggestible` check
* Use `dictionary.formStep()` to properly iterate root's forms

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -152,6 +152,8 @@ Optimizations
 
 * GITHUB#15085: Hunspell suggestions: Ensure candidate roots are not worse before updating. (Ilia Permiashkin)
 
+* GITHUB#15092: Fix bug where outer isWorseCheck was ignored in `GeneratingSuggester`. (Ilia Permiashkin)
+
 Changes in Runtime Behavior
 ---------------------
 * GITHUB#14823: Decrease TieredMergePolicy's default number of segments per
