--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -150,7 +150,7 @@ Optimizations
 
 * GITHUB#15083: Use DocValuesSkippers in SortedNumericDocValuesRangeQuery#rewrite(). (Alan Woodward)
 
-* GITHUB#15085: Hunspell suggestions: Ensure candidate roots are not worse before updating. (Ilia Permiashkin)
+* GITHUB#15085, GITHUB#15092: Hunspell suggestions: Ensure candidate roots are not worse before updating. (Ilia Permiashkin)
 
 Changes in Runtime Behavior
 ---------------------
@@ -195,8 +195,6 @@ Bug Fixes
   iteration of sub-queries in BooleanQuery and DisjunctionMaxQuery. This
   resulted in query branches being wrongly ignored if the QueryIndex was
   built by a different JVM. (Luke Kot-Zaniewski)
-
-* GITHUB#15092: Fix bug where outer isWorseCheck was ignored in `GeneratingSuggester`. (Ilia Permiashkin)
 
 Build
 ---------------------
