Decrease minimum deletes percentage in TMP (#14893)

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -120,6 +120,9 @@ API Changes
 * GITHUB#14426: Support determining desired off-heap memory requirements through
   KnnVectorsReader::getOffHeapByteSize (Chris Hegarty)
 
+* GITHUB#14893: TieredMergePolicy minimum deletes percentage decreased from 5% inclusive to 0% exclusive.
+  (Stefan Vodita)
+
 * GITHUB#14899: Deprecate MergeSpecification#segString(Directory) (kitoha)
 
 * GITHUB#14978: Add a bulk scoring interface to RandomVectorScorer
