Add optimistic collection to DiversifyingNearestChildren* vector queries  (#15063)
Optimistic knn search addresses a major issue where we return inconsistent results due to race conditions in the shared queue previously used over multi-segment search.

It not only returns consistent results, but is generally better overall when it comes to recall & latency.

This PR refactors the optimistic querying in AbstractKnnVectorQuery so that more sub-queries can take advantage of this logic.

Additionally, this refactors PatienceKnnVectorQuery to better fit this API and utilize the underlying multi-segment search logic.

Here are the results for nested vs. baseline. Note how baseline recall fluctuates, where it is consistent in candidate.

closes: https://github.com/apache/lucene/issues/15059

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -63,11 +63,14 @@ Improvements
 
 * GITHUB#14737: Clean up redundant code and comments in query node classes. (Stefan Vodita)
 
-* GITHUB#14816: Expose search strategy in KNN query
+* GITHUB#14816: Expose search strategy in KNN query (Tommaso Teofili)
 
 * GITHUB#14226: Use optimistic-with-checking KNN Query execution strategy in place of cross-thread
   global queue min-score checking. Improves performance and consistency. (Mike Sokolov, Dzung Bui,
   Ben Trent)
+
+* GITHUB#15063: Use optimistic-with-checking KNN Query strategy for `DiversifyingChildren*` queries.
+  (Ben Trent)
 
 Optimizations
 ---------------------
