Use the bulk SimScorer#score API to compute impact scores. (#15151)
In #15039 we introduced a bulk `SimScorer#score` API and used it to compute
scores with the leading conjunctive clause and "essential" clauses of
disjunctive queries. With this PR, we are now also using this bulk API when
translating (term frequency, length normalization factor) pairs into the
maximum possible score that a block of postings may produce.

To do it right, I had to change the impacts API to no longer return a List of
(term freq, norm) pairs, but instead two parallel arrays of term frequencies
and norms that could (almost) directly be passed to the `SimScorer#score` bulk
API. Unfortunately this makes the change quite big since many backward formats
had to be touched.

Co-authored-by: Guo Feng <52390227+gf2121@users.noreply.github.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -131,6 +131,9 @@ Optimizations
 
 * GITHUB#14998: Speed up flushing of live docs. (Adrien Grand)
 
+* GITHUB#15151: Use `SimScorer#score` bulk API to compute impact scores per
+  block of postings. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 * GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
